TTS play button hover effect

--- a/src/components/common/TTSPlayer.astro
+++ b/src/components/common/TTSPlayer.astro
@@ -152,7 +152,9 @@ import { Icon } from 'astro-icon/components';
     transition:
       opacity 0.2s,
       transform 0.1s;
-    box-shadow: 0 -2px 4px rgb(0 0 0 / 0.1);
+    box-shadow:
+      0 -2px 8px rgb(0 0 0 / 0.15),
+      0 -4px 16px rgb(0 0 0 / 0.1);
   }
 
   .tts-tab:hover {
