--- a/src/components/blog/ListItem.astro
+++ b/src/components/blog/ListItem.astro
@@ -73,7 +73,7 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
               <>
                 {' '}
                 · <Icon name="tabler:user" class="w-3.5 h-3.5 inline-block -mt-0.5 dark:text-gray-400" />
-                <span>{post.author.replaceAll('-', ' ')}</span>
+                <span>{typeof post.author === 'string' ? post.author.replaceAll('-', ' ') : post.author.name}</span>
               </>
             )
           }
