--- a/src/pages/[...blog]/[category]/[...page].astro
+++ b/src/pages/[...blog]/[category]/[...page].astro
@@ -5,6 +5,8 @@ import Layout from '~/layouts/PageLayout.astro';
 import BlogList from '~/components/blog/List.astro';
 import Headline from '~/components/blog/Headline.astro';
 import Pagination from '~/components/blog/Pagination.astro';
+import StructuredData from '~/components/common/StructuredData.astro';
+import { generateBreadcrumbs } from '~/utils/breadcrumbs';
 
 import { blogListRobots, getStaticPathsBlogCategory } from '~/utils/blog';
 
@@ -26,9 +28,19 @@ const metadata = {
     follow: blogListRobots?.follow,
   },
 };
+
+// Breadcrumb schema
+const breadcrumbSchema = generateBreadcrumbs(
+  Astro.url.pathname,
+  Astro.site!,
+  currentPage > 1 ? `Category: ${category.title} - Page ${currentPage}` : `Category: ${category.title}`
+);
 ---
 
 <Layout metadata={metadata}>
+  <!-- Structured Data -->
+  <StructuredData schema={breadcrumbSchema} />
+
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-4xl">
     <Headline>
       Category: {category.title}
